Ooooo found Xaringan and starting over...

--- a/docs/style.css
+++ b/docs/style.css
@@ -1,9 +1,4 @@
-slides > slide.title-slide{
-  background-image:url("figures/CyChecks_hexsticker.png");
-}
-
-slides > slide:not(.nobackground):before {
-  width: 150px;
-  height: 75px;
-  background-size: 150px 75px;
+.title-slide{
+  background-image: url("figures/CyChecks_hexsticker.png");
+  background-size: contain;
 }
